--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.17.1",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
     "openai": "^4.14.2"
