--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "react-chat-engine-advanced": "^0.1.28",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-particles": "^2.12.2",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
