--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.2.3",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "framer-motion": "^10.16.4",
     "openai": "^4.14.2",
     "react": "^18.2.0",
     "react-chat-engine-advanced": "^0.1.28",
