feat: nav bar + updated styling - used framer motion for dropdown menu in nav bar - added tsparticles bg

--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ariakit/react": "^0.3.5",
     "@auth0/auth0-react": "^2.2.3",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "openai": "^4.14.2",
     "react": "^18.2.0",
